--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Portuguese poetry'
+- GITenberg
 title: "Mágoas Amorosas de Elmano\r\nIdyllio Por Bocage"
 url: http://www.gutenberg.org/ebooks/22817
